--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
-certifi==2024.2.2
-charset-normalizer==3.3.2
-cycler==0.12.1
-fonttools==4.49.0
-idna==3.6
+certifi==2025.6.15
+charset-normalizer==3.4.2
+idna==3.10
 intervaltree==3.1.0
-kiwisolver==1.4.5
-matplotlib==3.5.1
 numpy==1.22.2
 pandas==1.5.3
-pillow==10.2.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2024.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.31.0
 scipy==1.9.3
-six==1.16.0
+six==1.17.0
 sortedcontainers==2.4.0
-urllib3==2.2.1
+urllib3==2.5.0
